fixed width button mobile in product

--- a/assets/src/style/pages.scss
+++ b/assets/src/style/pages.scss
@@ -313,6 +313,10 @@
 		&__content {
 			width: 70%;
 			margin: 0 auto;
+
+			&-wrap {
+				width: 100%;
+			}
 		}	
 	}
 
